Create new task implemented

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,4 +4,5 @@
     <string name="hello_blank_fragment">Hello blank fragment</string>
     <string name="no_past_activities_available">No past activities available</string>
     <string name="past_activities">PAST ACTIVITIES</string>
+    <string name="create_a_new_task">Create a New Task</string>
 </resources>
